--- a/html-css/hc14_Bootstrap-Project/css/style.css
+++ b/html-css/hc14_Bootstrap-Project/css/style.css
@@ -11,4 +11,40 @@
 }
 .navbar .nav-link:hover{
     color: var(--red);
-}         
+}
+
+/*! ------------------2-CAROUSEL------------------*/
+.carousel-item{
+    max-height: calc(100vh - 95px);
+}
+.carousel-caption .btn{
+    width: 7rem;
+}
+.carousel-caption h5{
+    color: var(--red);
+    font-size: 2.4rem;
+    text-shadow: 3px 3px 3px black;
+}
+.carousel-caption p{
+    text-shadow: 3px 3px 3px black;
+    font-weight: 600; 
+}
+.carousel-caption{
+    /* border: 2px solid red; */
+    /* margin-bottom: 10rem; */
+    bottom: 5rem;
+    /* top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+
+}
+
+.carousel-indicators{
+    gap: 0.7rem !important;
+}
+
+.carousel-indicators button{
+    background-color: var(--red) !important;
+    padding: .1rem !important;
+    width: 3rem !important;
+}
