--- a/html-css/hc14_Bootstrap-Project/css/style.css
+++ b/html-css/hc14_Bootstrap-Project/css/style.css
@@ -48,3 +48,21 @@
     padding: .1rem !important;
     width: 3rem !important;
 }
+
+/*! ------------------3-ABOUT SECTION------------------*/
+
+/*! ------------------4-INSTRUCTORS------------------*/
+
+section#instructors .card{
+    transition: transform 1s ease-in-out;
+}
+section#instructors .card:hover{
+    transform: scale(1.05);
+}
+
+section#instructors i{
+    transition: opacity .6s ease-in-out;
+}
+section#instructors i:hover{
+    opacity: 0.5;
+}
