--- a/html-css/hc14_Bootstrap-Project/css/style.css
+++ b/html-css/hc14_Bootstrap-Project/css/style.css
@@ -66,3 +66,18 @@ section#instructors i{
 section#instructors i:hover{
     opacity: 0.5;
 }
+/*! ------------------4-STUDENTS SECTION------------------*/
+
+/*! ------------------5-COURSES SECTION------------------*/
+
+section#courses .nav-link.active{
+    background-color: var(--red);
+}
+
+section#courses .nav-link{
+    color: white;
+}
+
+section#courses .nav-pills{
+    font-size: 0.8rem;
+}
