--- a/html-css/hc14_Bootstrap-Project/css/style.css
+++ b/html-css/hc14_Bootstrap-Project/css/style.css
@@ -81,3 +81,46 @@ section#courses .nav-link{
 section#courses .nav-pills{
     font-size: 0.8rem;
 }
+
+/*! ------------------6-CONTACT SECTION------------------*/
+
+/*! ------------------7-FOOTER---------------------------*/
+
+footer i{
+    color: white;
+    font-size: 2rem;
+    margin-right: 0.8rem;
+    text-decoration: none;
+    transition: all 1s;
+}
+
+footer i:hover{
+    color: var(--red);
+    transform: scale(2);
+}
+
+/*! ------------------8-BUTTON---------------------------*/
+
+.btn-up{
+    position: fixed;
+    bottom: 1rem;
+    right: 1rem;
+    background-color: var(--red);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    transition: all 1s;
+    font-size: 1.5rem;
+}
+.btn-up:hover{
+    color: black;
+}
+
+.btn-up:hover i{
+    transform: scale(1.5);
+}
