--- a/html-css/hc15-sass_intro/scss/style.scss
+++ b/html-css/hc15-sass_intro/scss/style.scss
@@ -1,9 +1,12 @@
+@import "variables" ;
+
 // $bgColor: #444;
 
 body {
-    font-family: "Thoma";
-    font-size: 20px;
-    color: #444;
+    font-family: $fontFamily;
+    font-size: $fontSize;
+    color: $fontColor;
+    background-color: $bgColor;
 }
 header {
     background-color: #30a7c3;
