--- a/html-css/hc15-sass_intro/css/style.css
+++ b/html-css/hc15-sass_intro/css/style.css
@@ -1,7 +1,8 @@
 body {
-  font-family: "Thoma";
-  font-size: 20px;
-  color: #444;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.2rem;
+  color: white;
+  background-color: pink;
 }
 
 header {
