--- a/html-css/hc15-sass_intro/css/style.css
+++ b/html-css/hc15-sass_intro/css/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.2rem;
@@ -7,6 +13,7 @@ body {
 
 header {
   background-color: #30a7c3;
+  padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -19,6 +26,7 @@ header ul {
 }
 header ul li {
   display: inline-block;
+  padding: 0.5rem;
 }
 header ul li a {
   text-decoration: none;
