--- a/html-css/hc15-sass_intro/scss/style.scss
+++ b/html-css/hc15-sass_intro/scss/style.scss
@@ -1,4 +1,5 @@
 @import "variables" ;
+@import "reset";
 
 // $bgColor: #444;
 
@@ -9,8 +10,8 @@ body {
     background-color: $bgColor;
 }
 header {
-    background-color: #30a7c3;
-
+    background-color: $navBgColor;
+    padding: 1rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -23,6 +24,7 @@ header {
         list-style-type: none;
         li {
             display: inline-block;
+            padding: 0.5rem;
             a {
                 text-decoration: none;
                 color: white;
