--- a/html-css/hc15-sass_intro/css/style.css
+++ b/html-css/hc15-sass_intro/css/style.css
@@ -19,7 +19,12 @@ header {
   align-items: center;
 }
 header img {
-  width: 150px;
+  width: 80px;
+  border: 2px solid brown;
+  border-radius: 10px;
+}
+header img:hover {
+  scale: 1.1;
 }
 header ul {
   list-style-type: none;
@@ -31,6 +36,18 @@ header ul li {
 header ul li a {
   text-decoration: none;
   color: white;
+}
+header ul li a:hover {
+  text-decoration: underline;
+}
+
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: hotpink;
+  line-height: 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
