--- a/html-css/hc15-sass_intro/css/style.css
+++ b/html-css/hc15-sass_intro/css/style.css
@@ -49,5 +49,20 @@ header ul li a:hover {
   background-color: hotpink;
   line-height: 2rem;
 }
+.banner aside button {
+  border: none;
+  background-color: rgb(224, 169, 169);
+  border-radius: 10px;
+  padding: 0.5rem;
+}
+.banner aside button:hover {
+  background-color: pink;
+  cursor: pointer;
+}
+.banner img {
+  width: 40%;
+  max-width: 600px;
+  min-width: 300px;
+}
 
 /*# sourceMappingURL=style.css.map */
