--- a/html-css/hc15-sass_intro/css/style.css
+++ b/html-css/hc15-sass_intro/css/style.css
@@ -1,9 +1,13 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+/*! mixin @include */
+/* fonksiyon tanımlıyoruz aslında. Bu fonksiyon parametre alabilen bir fonksiyon. Parametreleri tanımalrken $ işaretini kullanıyoruz. Mixinler parametre almak zorunda değildir. yani static yapılar da oluşturabiliriz. */
+/*mixinleri çaığırırken @include anahtar kelimesiyle çağırıyoruz.*/
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.2rem;
@@ -63,6 +67,64 @@ header ul li a:hover {
   width: 40%;
   max-width: 600px;
   min-width: 300px;
+}
+
+.cards {
+  display: flex;
+  gap: 0.4rem;
+  margin-top: 1rem;
+}
+.cards .card1 {
+  border-radius: 10px;
+  border: 2px solid brown;
+  color: black;
+  background-color: yellow;
+  text-align: center;
+  flex: 1;
+  height: 10rem;
+}
+.cards .card2 {
+  border-radius: 10px;
+  border: 2px solid brown;
+  color: yellow;
+  background-color: red;
+  text-align: center;
+  flex: 1;
+  height: 10rem;
+}
+.cards .card3 {
+  border-radius: 10px;
+  border: 2px solid brown;
+  color: white;
+  background-color: black;
+  text-align: center;
+  flex: 1;
+  height: 10rem;
+}
+.cards .card4 {
+  border-radius: 10px;
+  border: 2px solid brown;
+  color: yellow;
+  background-color: blue;
+  text-align: center;
+  flex: 1;
+  height: 10rem;
+}
+
+.articles {
+  display: flex;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+.articles .article1, .articles .article2 {
+  background-color: gray;
+  flex: 1;
+  height: 10rem;
+  border-radius: 10px;
+  padding: 1rem;
+}
+.articles .article2 {
+  background-color: green;
 }
 
 /*# sourceMappingURL=style.css.map */
