--- a/html-css/hc16_sass_project/css/style.css
+++ b/html-css/hc16_sass_project/css/style.css
@@ -6,6 +6,22 @@
   box-sizing: border-box;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__logo {
+  width: 50px;
+  height: 50px;
+}
+.header i {
+  display: none;
+}
+.header__links {
+  display: flex;
+}
+
 body {
   background-color: #ffffff;
 }
