--- a/html-css/hc16_sass_project/scss/components/_navbar.scss
+++ b/html-css/hc16_sass_project/scss/components/_navbar.scss
@@ -1,1 +1,19 @@
 // navbar
+@use "../abstracts/mixin" as *;
+.header {
+    //display: flex;
+    //justify-content: space-between;
+    //align-items: center;
+    @include flex(space-between);
+
+    &__logo {
+        width: 50px;
+        height: 50px;
+    }
+    i {
+        display: none;
+    }
+    &__links {
+        display: flex;
+    }
+}
