--- a/html-css/hc16_sass_project/scss/abstracts/_mixin.scss
+++ b/html-css/hc16_sass_project/scss/abstracts/_mixin.scss
@@ -4,3 +4,10 @@
     justify-content: $jc;
     align-items: $ai;
 }
+
+@mixin setFont($ff, $fw, $fs, $lh) {
+    font-family: $ff;            
+    font-weight: $fw;
+    font-size: $fs;
+    line-height: $lh;
+}
