--- a/html-css/hc16_sass_project/css/style.css
+++ b/html-css/hc16_sass_project/css/style.css
@@ -30,13 +30,14 @@
   color: #202336;
   border: none;
   background-color: #ffffff;
-  font-family: Inter;
-  font-weight: 500;
+  font-family: "Inter";
+  font-weight: 100;
   font-size: 1rem;
   line-height: 19px;
 }
 .header__links--disabled {
   color: #b8becd;
+  font-weight: 600;
 }
 
 body {
