--- a/html-css/hc16_sass_project/scss/components/_navbar.scss
+++ b/html-css/hc16_sass_project/scss/components/_navbar.scss
@@ -23,15 +23,17 @@
             color: $headerColor;
             border: none;
             background-color: $mainColor;
-            font-family: Inter;
+            //font-family: Inter;
             //font-style: normal;
-            font-weight: 500;
-            font-size: 1rem;
-            line-height: 19px;
+            //font-weight: 500;
+            //font-size: 1rem;
+            //line-height: 19px;
+            @include setFont("Inter", 100, 1rem, 19px)
         }
         &--disabled {
             @extend .header__links--home;
             color: #b8becd;
+            font-weight: 600;
         }
     }
 }
