--- a/html-css/hc16_sass_project/scss/components/_navbar.scss
+++ b/html-css/hc16_sass_project/scss/components/_navbar.scss
@@ -35,5 +35,9 @@
             color: #b8becd;
             font-weight: 600;
         }
+        &--login {
+            @include btn();
+        }
+        &--register {}
     }
 }
