--- a/html-css/hc16_sass_project/scss/components/_navbar.scss
+++ b/html-css/hc16_sass_project/scss/components/_navbar.scss
@@ -36,8 +36,10 @@
             font-weight: 600;
         }
         &--login {
-            @include btn();
+            @include btn(1.6rem, 0.3rem, $btnBorderColor, $mainColor);
         }
-        &--register {}
+        &--register {
+            @include btn(1.6rem, 0.3rem, $mainColor, $btnBorderColor);
+        }
     }
 }
