--- a/html-css/hc16_sass_project/scss/components/_responsive.scss
+++ b/html-css/hc16_sass_project/scss/components/_responsive.scss
@@ -1,1 +1,16 @@
 // responsive
+@use "../abstracts/mixin" as *;
+
+@include media-sm{
+    .header{
+        &__links,
+        &__logo {
+            display: none;
+        }
+        i {
+            display: inline-block;
+            margin-left: auto;
+            padding-right: 1rem;
+        }
+    }
+}
