--- a/html-css/hc16_sass_project/scss/main.scss
+++ b/html-css/hc16_sass_project/scss/main.scss
@@ -12,6 +12,9 @@
 
 //? COMPONENTS
 @use "./components/navbar";
+@use "./components/responsive";
+
+//? SECTIONS
 @use "./sections/home";
 
 //? FONTS AND 3RD PARTY
