--- a/html-css/hc16_sass_project/css/style.css
+++ b/html-css/hc16_sass_project/css/style.css
@@ -68,7 +68,11 @@
   opacity: 0.6;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
+  .header {
+    display: block;
+    text-align: right;
+  }
   .header__links, .header__logo {
     display: none;
   }
@@ -76,6 +80,13 @@
     display: inline-block;
     margin-left: auto;
     padding-right: 1rem;
+  }
+  .header .show {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
   }
 }
 .home {
