--- a/html-css/hc16_sass_project/scss/components/_responsive.scss
+++ b/html-css/hc16_sass_project/scss/components/_responsive.scss
@@ -3,6 +3,8 @@
 
 @include media-sm{
     .header{
+        display: block;
+        text-align: right;
         &__links,
         &__logo {
             display: none;
@@ -12,6 +14,10 @@
             margin-left: auto;
             padding-right: 1rem;
         }
-        .show {}
+        .show {
+            @include flex(center, center); //?menu gorunur hale geldi
+            flex-direction: column;
+            gap: 1rem;
+        }
     }
 }
