--- a/html-css/hc04_BoxModel,Texts,Fonts,Shadows/text/text.css
+++ b/html-css/hc04_BoxModel,Texts,Fonts,Shadows/text/text.css
@@ -11,9 +11,12 @@ h1{
     text-shadow: 2px 2px 2px red;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
-    column-count: 3;
-    column-rule: 3px double blue;
-    
+    column-count: 3; /* text i uce bol */
+    column-rule: 3px double blue; /* araya cift cizgi */
+    /* -webkit-column-count: 3;
+    -moz-column-count: 3px double blue;
+    tarayicida desteklenmiyorsa basina -webkit eklenir     */
+    font-size: 1rem;
     
 }
 
@@ -21,32 +24,33 @@ h1{
     color: red;
     text-align: right;
     text-transform: uppercase;
-    direction: rtl;
+    direction: rtl; /* sagdan sola */
     background-color: rgba(0, 0, 0, 0.8);
     color: white;
-    text-shadow: 2px 2px 5px black;
+    text-shadow: 2px 2px 5px black; /* golge vermek icin */
     padding: 10px;
-    box-shadow: 5px 5px 10px black;
+    box-shadow: 5px 5px 10px black; /* kutuya golge verdik */
     border-radius: 10px;
-    text-indent: 1rem;
+    text-indent: 1rem; /* satir basi boslugu */
 
 }
 
 #par3{
     color: rgb(120, 45, 97);
-    text-align: justify;
-    text-decoration: underline;
+    text-align: justify; /* paragrafi iki yana yaslar */
+    text-decoration: underline; /* alti cizili */
 
 }
 
 #par4{
     color: #081682;
-    text-decoration: line-through  wavy;
+    text-decoration: line-through  wavy; /* textin ustu cizili ve wavy ile dalgali cizili*/
+
 }
 
 #par5{
     color: fuchsia;
-    text-decoration: overline line-through wavy;
+    text-decoration: overline line-through wavy; /* textin hem ustu hemde alti cizili ve wavy ile dalgali cizili*/
 
 }
 
@@ -54,11 +58,11 @@ h1{
     background-color: rgba(0, 0, 0, 0.8);
     color: white;
     padding: 5px;
-    text-indent: 1rem;
-    letter-spacing: 3px;
+    text-indent: 1rem; /* satir basi bosluk birakir */
+    letter-spacing: 3px; /* harfler arasi bosluk birakir */
     line-height: 1.5;
     direction: rtl; /*yazıyı ve harfleri tersten yazmak istiyorsam direction: rtl; ve unicode-bidi: bidi-ovverride;kullanilir*/
-    unicode-bidi: bidi-override;
+    unicode-bidi: bidi-override; /* harfleri dondurur */
 }
 
 #par7{
