--- a/html-css/hc04_BoxModel,Texts,Fonts,Shadows/background/background.css
+++ b/html-css/hc04_BoxModel,Texts,Fonts,Shadows/background/background.css
@@ -1,7 +1,7 @@
 
 body{
     background-color: #4158D0;
-    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+    background-image: linear-gradient(43deg, #4158D0 0%, #C850C0aa 46%, #FFCC70aa 100%), url(./img/background.jpg);
     height: 100vh;
     background-repeat: no-repeat;
     background-attachment: fixed;/*Arkdaki fotoğrafın hareket etmesini engeller*/
